change z-index on smal-image-text so it is no longer behind mars img

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body {
   display: none;
   position: absolute;
   bottom: 80%;
+  z-index: 2;
   color: white;
 }
 .image-text {
